syntax="proto3";

option java_package="com.example.finaldemo.proto";
option java_multiple_files=true;
import "google/protobuf/timestamp.proto";

message UserAssetDTO{
  string asset_name=1;
  string email=2;
  int32 quantity=3;
  string created_ts=4;
  string updated_ts=5;
}
message UserAssetDTOList{
  repeated UserAssetDTO user_asset=1;
}
